# Bugs-Bunny

./: .cz.toml  .gitignore  .pre-commit-config.yml  BOT_REQUIREMENTS.md  README.md  bug_fix_report.txt  inspector.py  main.py  pyproject.toml
backend/: requirements.txt
backend/todo_project/: urls.py
backend/todos/: serializers.py  views.py
bug_fixer_agent/: .env  README.md  agent.py  bug_definitions.py  config.py  logger.py  prompts.py  requirements.txt  run.py
bug_fixer_agent/tools/: bug_detector.py  code_analyzer.py  fix_applier.py  static_analyzer.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: TodoList.tsx
frontend/src/services/: api.ts
tests/bug_fixer_agent/: test_agent_core.py
